force-app/main/default/objects/User/fields/Admin_Console__c.field-meta.xml
<CustomField>
    <fullName>Admin_Console__c</fullName>
    <label>Life Cycle Admin Console</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>