force-app/main/default/objects/User/fields/affectlayer__AffectLayer_Callback_Number_Label_New__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__AffectLayer_Callback_Number_Label_New__c</fullName>
    <label>AffectLayer Callback Number Label New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>