force-app/main/default/objects/User/fields/affectlayer__AffectLayer_Callback_Number_New__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__AffectLayer_Callback_Number_New__c</fullName>
    <label>AffectLayer Callback Number New</label>
    <length>40</length>
    <type>Text</type>
</CustomField>