force-app/main/default/objects/User/fields/affectlayer__AffectLayer_Caller_Id_New__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__AffectLayer_Caller_Id_New__c</fullName>
    <label>AffectLayer Caller Id New</label>
    <length>40</length>
    <type>Text</type>
</CustomField>