force-app/main/default/objects/User/fields/Calndely_Link__c.field-meta.xml
<CustomField>
    <fullName>Calndely_Link__c</fullName>
    <label>Calndely Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>