force-app/main/default/objects/User/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <description>Used for Resellers hierarchy.</description>
    <label>Channel Manager</label>
    <relationshipName>Channel_Manager</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>