force-app/main/default/objects/User/fields/Chili_Piper__c.field-meta.xml
<CustomField>
    <fullName>Chili_Piper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-5069</description>
    <label>Chili Piper</label>
    <type>Checkbox</type>
</CustomField>