force-app/main/default/objects/User/fields/Date_of_last_training__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_training__c</fullName>
    <description>MIS-4205</description>
    <label>Date of last training</label>
    <type>DateTime</type>
</CustomField>