force-app/main/default/objects/User/fields/Employee_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Hire_Date__c</fullName>
    <description>MIS-143</description>
    <label>Employee Hire/Transition Date</label>
    <type>Date</type>
</CustomField>