force-app/main/default/objects/User/fields/Employee_HR_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_HR_ID__c</fullName>
    <description>HR Employee ID, synced from the HR system</description>
    <label>Employee HR ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>