force-app/main/default/objects/User/fields/Exclude_from_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, The User Flow will not create these Users as &quot;Default Opportunity Team&quot;. This is for Carrie/Lior that should be hardcoded in Email Alerts and for Or/Jason that shouldn&apos;t get Emails at all.</description>
    <label>Exclude from Email Alerts</label>
    <type>Checkbox</type>
</CustomField>