force-app/main/default/objects/User/fields/Exclude_From_Zuora_Active_Subs_Val__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Zuora_Active_Subs_Val__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Excludes from Zuora Active Subscription Validation</description>
    <inlineHelpText>Excludes from Zuora Active Subscription Validation</inlineHelpText>
    <label>Exclude From Zuora Active Subs. Val.</label>
    <type>Checkbox</type>
</CustomField>