force-app/main/default/objects/User/fields/Financial_Invoice_Management__c.field-meta.xml
<CustomField>
    <fullName>Financial_Invoice_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows handling financial section in invoice</inlineHelpText>
    <label>Financial Invoice Management</label>
    <type>Checkbox</type>
</CustomField>