force-app/main/default/objects/User/fields/GM_VP__c.field-meta.xml
<CustomField>
    <fullName>GM_VP__c</fullName>
    <description>MIS-7108</description>
    <formula>Manager.Manager.FirstName  +&quot; &quot;+ Manager.Manager.LastName +BR() +
 Manager.Manager.Title</formula>
    <label>GM/VP</label>
    <type>Text</type>
</CustomField>