force-app/main/default/objects/User/fields/Gong__c.field-meta.xml
<CustomField>
    <fullName>Gong__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chorus</label>
    <type>Checkbox</type>
</CustomField>