force-app/main/default/objects/User/fields/Issue_Proforma_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Issue_Proforma_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issue Proforma Invoice</label>
    <type>Checkbox</type>
</CustomField>