force-app/main/default/objects/User/fields/LeadIQ__c.field-meta.xml
<CustomField>
    <fullName>LeadIQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LeadIQ</label>
    <type>Checkbox</type>
</CustomField>