force-app/main/default/objects/User/fields/Level_11__c.field-meta.xml
<CustomField>
    <fullName>Level_11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level 11</label>
    <type>Checkbox</type>
</CustomField>