force-app/main/default/objects/User/fields/OFB__c.field-meta.xml
<CustomField>
    <fullName>OFB__c</fullName>
    <description>MIS-4266</description>
    <label>OFB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>