force-app/main/default/objects/User/fields/Reseller_Automation_User__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Automation_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reseller Automation User</label>
    <type>Checkbox</type>
</CustomField>