force-app/main/default/objects/User/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <description>MIS-6829 - Works with Custom Metadata - &quot;User Sub Motion&quot; - Make sure to update the metadata if the values in this field are changed</description>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AM TL</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>AS TL</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>CS TL</fullName>
            </value>
            <value>
                <fullName>E2E</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MS TL</fullName>
            </value>
            <value>
                <fullName>NT CS</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Onboarding TL</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SA TL</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>SDR TL</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
            <value>
                <fullName>SM TL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>