force-app/main/default/objects/User/fields/Salesloft__c.field-meta.xml
<CustomField>
    <fullName>Salesloft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesloft</label>
    <type>Checkbox</type>
</CustomField>