force-app/main/default/objects/User/fields/Slack_Alerts_NYC_Office__c.field-meta.xml
<CustomField>
    <fullName>Slack_Alerts_NYC_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-6750</description>
    <label>Slack Alerts - NYC Office</label>
    <type>Checkbox</type>
</CustomField>