force-app/main/default/objects/User/fields/Slack_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_ID__c</fullName>
    <label>Slack ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>