force-app/main/default/objects/User/fields/Spiff_Under_Pod_Name__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Under_Pod_Name__c</fullName>
    <description>MIS-1867</description>
    <label>Spiff Under Pod Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>