force-app/main/default/objects/User/fields/Streetsight__c.field-meta.xml
<CustomField>
    <fullName>Streetsight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Streetsight</label>
    <type>Checkbox</type>
</CustomField>