force-app/main/default/objects/User/fields/Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Sub_Division__c</fullName>
    <description>Works with Custom Metadata - &quot;User Sub Motion&quot; - Make sure to update the metadata if the values in this field are changed</description>
    <label>Owner Sub Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agencies &amp; Consultancies</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>ANZ Enterprise</fullName>
            </value>
            <value>
                <fullName>ANZ Inside Sales</fullName>
            </value>
            <value>
                <fullName>APAC Strategic</fullName>
            </value>
            <value>
                <fullName>EMEA Enterprise</fullName>
            </value>
            <value>
                <fullName>EMEA Inside Sales B2B</fullName>
            </value>
            <value>
                <fullName>EMEA Inside Sales B2C</fullName>
            </value>
            <value>
                <fullName>EMEA Inside Sales ENT</fullName>
            </value>
            <value>
                <fullName>EMEA Mid Market</fullName>
            </value>
            <value>
                <fullName>GCR Enterprise</fullName>
            </value>
            <value>
                <fullName>GCR Inside Sales</fullName>
            </value>
            <value>
                <fullName>Go To Market</fullName>
            </value>
            <value>
                <fullName>India Inside Sales</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>JPKR Enterprise</fullName>
            </value>
            <value>
                <fullName>JPKR Inside Sales</fullName>
            </value>
            <value>
                <fullName>LATAM Inside Sales</fullName>
            </value>
            <value>
                <fullName>LLM &amp; AI</fullName>
            </value>
            <value>
                <fullName>Meta/MSFT</fullName>
            </value>
            <value>
                <fullName>NA Enterprise</fullName>
            </value>
            <value>
                <fullName>NA Inside Sales</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Reseller - Brazil - 108</fullName>
            </value>
            <value>
                <fullName>Reseller - Brazil - Alpha</fullName>
            </value>
            <value>
                <fullName>Reseller - Vietnam - AMS JSC</fullName>
            </value>
            <value>
                <fullName>SEA Enterprise</fullName>
            </value>
            <value>
                <fullName>SEA Inside Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>