force-app/main/default/objects/User/fields/Sub_Motion__c.field-meta.xml
<CustomField>
    <fullName>Sub_Motion__c</fullName>
    <description>MIS-8255</description>
    <formula>TEXT(Role_Type__c) + &apos; &apos; +  TEXT(User_Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Motion</label>
    <type>Text</type>
</CustomField>