force-app/main/default/objects/User/fields/Sub_Motion_old1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Motion_old1__c</fullName>
    <description>MIS-6829 - Works with Custom Metadata - &quot;User Sub Motion&quot;</description>
    <inlineHelpText>Calculated according to Sub Division and Role Type</inlineHelpText>
    <label>Sub Motion - old1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>