force-app/main/default/objects/User/fields/SYSFullID__c.field-meta.xml
<CustomField>
    <fullName>SYSFullID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>SYSFullID</label>
    <type>Text</type>
</CustomField>