force-app/main/default/objects/User/fields/SYSProfileName__c.field-meta.xml
<CustomField>
    <fullName>SYSProfileName__c</fullName>
    <formula>Profile.Name</formula>
    <label>SYSProfileName</label>
    <type>Text</type>
</CustomField>