force-app/main/default/objects/User/fields/SysRoleName__c.field-meta.xml
<CustomField>
    <fullName>SysRoleName__c</fullName>
    <formula>UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SysRoleName</label>
    <type>Text</type>
</CustomField>