force-app/main/default/objects/User/fields/TableauID__c.field-meta.xml
<CustomField>
    <fullName>TableauID__c</fullName>
    <description>MIS-7432 - for tableau access</description>
    <label>TableauID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>