force-app/main/default/objects/User/fields/Training_Status__c.field-meta.xml
<CustomField>
    <fullName>Training_Status__c</fullName>
    <description>MIS-4001</description>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending onboarding</fullName>
            </value>
            <value>
                <fullName>Skipped onboarding</fullName>
            </value>
            <value>
                <fullName>Completed onboarding</fullName>
            </value>
            <value>
                <fullName>Pending blacklist training</fullName>
            </value>
            <value>
                <fullName>Skipped blacklist training</fullName>
            </value>
            <value>
                <fullName>Completed blacklist training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>