force-app/main/default/objects/User/fields/User_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>User_Business_Unit__c</fullName>
    <description>MIS-4081</description>
    <label>User Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>ALO</fullName>
            </value>
            <value>
                <fullName>Investors</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>