force-app/main/default/objects/User/fields/User_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Created_Date__c</fullName>
    <description>#1094186 Populated by ‘User - All automations’ Process Builder</description>
    <label>User Created Date</label>
    <type>DateTime</type>
</CustomField>