force-app/main/default/objects/User/fields/voicenter_extension__c.field-meta.xml
<CustomField>
    <fullName>voicenter_extension__c</fullName>
    <label>Voicenter Extension</label>
    <length>50</length>
    <type>Text</type>
</CustomField>