force-app/main/default/objects/User/fields/VoicenterOrgCode__c.field-meta.xml
<CustomField>
    <fullName>VoicenterOrgCode__c</fullName>
    <label>VoicenterOrgCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>