force-app/main/default/objects/User/fields/VoicenterUserCode__c.field-meta.xml
<CustomField>
    <fullName>VoicenterUserCode__c</fullName>
    <label>Voicenter User Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>