force-app/main/default/objects/User/fields/Zoominfo__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zoominfo</label>
    <type>Checkbox</type>
</CustomField>