force-app/main/default/objects/User/validationRules/Cant_edit_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_edit_User</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    $User.Id &lt;&gt;  Id ,
    $Profile.Name  &lt;&gt; &apos;Integration User&apos;,
				$Profile.Name  &lt;&gt; &apos;Integration User - API Only&apos;,
    $Profile.Name  &lt;&gt; &apos;SW SalesOps&apos;,
    $Profile.Name  &lt;&gt; &apos;SW SalesOps Extended&apos;,
    $Profile.Name  &lt;&gt; &apos;System Administrator&apos;,
    $Profile.Name  &lt;&gt; &apos;System Administrator without SFDC-DF&apos;,
    $Profile.Name  &lt;&gt; &apos;B2BMA Integration User&apos;,
    !CONTAINS($User.Username, &apos;autoproc&apos;) 
)</errorConditionFormula>
    <errorMessage>You do not have permission to edit user detail.</errorMessage>
</ValidationRule>