force-app/main/default/objects/User/validationRules/Restrict_Editing_Profile_And_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Editing_Profile_And_Role</fullName>
    <active>true</active>
    <errorConditionFormula>and(
  $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
   $User.Alias  &lt;&gt; &apos;auser&apos;,
  or(
    ISCHANGED(UserRoleId),
    ISCHANGED(ProfileId),
    ISCHANGED(IsActive)
  )
)</errorConditionFormula>
    <errorMessage>Please contact MIS for assistance.</errorMessage>
</ValidationRule>