force-app/main/default/objects/User/listViews/Integration_Users.listView-meta.xml
<ListView>
    <fullName>Integration_Users</fullName>
    <booleanFilter>2 AND (1 OR 3)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.DIVISION</field>
        <operation>equals</operation>
        <value>Integration</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Integration User</value>
    </filters>
    <label>Integration Users</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Admin</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>