force-app/main/default/objects/User/listViews/Mist_Integration_Users.listView-meta.xml
<ListView>
    <fullName>Mist_Integration_Users</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Integration</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>mist@similarweb.com</value>
    </filters>
    <label>Mist Integration Users</label>
</ListView>