force-app/main/default/objects/User/listViews/Pardot_Users.listView-meta.xml
<ListView>
    <fullName>Pardot_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>pardot</value>
    </filters>
    <label>Pardot Users</label>
</ListView>